# ACG

./: .gitignore  readme.md
src/main/: main.go
src/main/c++/lab6/: CMakeLists.txt  Camera.h  Shader.h  main.cpp
src/main/c++/lab6/shaders/: lighting.fragment.shader  lighting.vertex.shader
src/main/cube/: cubeExample.go  movements.go  shader.go  texture.go  values.go
src/main/cube/shaders/: object.fragment.shader  object.vertex.shader  texture.fragment.shader  texture.vertex.shader
src/main/example/cube/: cubeExample.go
src/main/example/triangle/: triangle.go
src/main/example/withGLUT/: simple.go
src/main/lab4/: lab4.go  openGL.go
src/main/lab6/: lab6.go
src/main/lab6WithoutGLUT/: lab6.go  openGL.go
src/main/labs/lab2/: functions.go  lab2.go
src/main/labs/lab3/: lab3.go
src/main/types/: Animation.go  Line.go  Point.go  Shape.go  Side.go  Vector.go
src/main/utils/: analyzer.go  randomizer.go  shapeDrawer.go
src/main/values/: lab3.go
